k8s/postgres.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: oauth-postgres
  namespace: "oauth"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: oauth-postgres
    spec:
      containers:
        - name: oauth-postgres
          image: postgres:11
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/pgdata
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: oauth-postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-postgres
  namespace: "oauth"
  labels:
    app: oauth-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: oauth-postgres
